--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <div class="header-text"></div>
+            <p>UI/UX Desiner</p>
+            <h1>Hi,I'm <span>Rishi</span><br> vijaywargiya From India</h1>
 
+        </div>
+    </div>
+    <div id ="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                <img src="images/user.png" >
+                </div>
+                <div class="about-col-2"></div>
+                <h1>About me</h1>
+                
+            </div>
         </div>
     </div>
     
